--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,32 @@
-# ignore these files:
+# OSX
+
 .DS_Store
+.DS_Store?
+._*
+*~
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # ignore all files temp/ directory
-temp/
-ignore all files that end with a tilde ~ (temporary files)
-*~
 
-# cache files for sublime text
+_bu/
+
+# SASS
+.sass-cache
+
+# SublimeText
+*.sublime-project
+*.sublime-workspace
 *.tmlanguage.cache
 *.tmPreferences.cache
 *.stTheme.cache
 
-# workspace files are user-specific
-*.sublime-workspace
 
-# project files should be checked into the repository, unless a significant
-# proportion of contributors will probably not be using SublimeText
-# *.sublime-project
+#CodeKit
+config.codekit
+_BU/
 
 # sftp configuration file
 sftp-config.json
